[tool.poetry]
name = "reppyl"
version = "0.1.0"
description = "A Python REPL development experience."
authors = ["Jason <jason@lauman.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
watchfiles = "^1.0.3"
pytest = "^8.3.4"
ruff = "^0.8.3"
python-lsp-server = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
